--- a/main.tex
+++ b/main.tex
@@ -1170,9 +1170,9 @@
   $aH \mapsto (aN)(H/N)$と定めたい.
   \begin{align*}
     &(aN)(H/N) = (bN)(H/N) \\
-    &\Leftrightarrow (aN)(b^{-1}N) \in H/N \\
-    &\Leftrightarrow ab^{-1}N \in H/N \\
-    &\Leftrightarrow ab^{-1} \in H \\
+    &\Leftrightarrow (b^{-1}N)(aN) \in H/N \\
+    &\Leftrightarrow b^{-1}aN \in H/N \\
+    &\Leftrightarrow b^{-1}a \in H \\
   \end{align*}
   であることから, $f$がwell-definedかつ単射であることがわかる.
   また明らかに$f$は全射なので, $f$は全単射.
