--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,8 @@
 \DeclarePairedDelimiter{\order}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\abs}{\lvert}{\rvert}
 \DeclarePairedDelimiter{\norm}{\lVert}{\rVert}
-
+\DeclarePairedDelimiterX{\genrel}[2]{\langle}{\rangle}{#1 \mid #2}
+\DeclarePairedDelimiter\floor{\lfloor}{\rfloor}
 
 \begin{document}
 
@@ -2139,4 +2140,380 @@
   (第2版第1刷には問題文の誤植があるので, 正誤表を参照.)
   ここまでの演習問題と, $p$群が非可換単純群でないことよりしたがう.
 \end{ans}
+
+\fakesubsection{4.6 生成元と関係式}
+
+\begin{ans}
+  $x^2$と$y$で生成される部分群を$H$とする.
+  $(x^2)^{-1} = x^2$と
+  \[
+    x^2y = x(xy) = x(y^2x) = (xy)yx = (y^2x)yx = y^2(xy)x = y^2(y^2x)x = yx^2
+  \]
+  より, $H$の元は$y^ix^j\ (i = 0, 1, 2, j = 0, 2)$の形に書くことができる.
+  例題4.6.7で示されたことから, これらは互いに異なる元であり, $\order{H} = 6$.
+  また生成元が互いに可換なので$H$は可換群であり, 演習問題2.10.9より$H \simeq \Z{6}$.
+\end{ans}
+
+\begin{ans}
+  $K = \genrel{x, y}{x^n = y^2 = 1,\ yxy = x^{-1}}$とおく.
+  $D_n$は$K$と同じ関係式をみたす$2$元で生成されるので,
+  定理4.6.5より全射準同型$\phi: K \rightarrow D_n$がある.
+  例題4.6.6と同様にして$\order{K} \le 2n$であり, $\order{D_n} = 2n$なので,
+  $\phi$は同型である.
+\end{ans}
+
+\begin{ans}
+  \[
+    y = x(xyx)x = xy^2x = (xyx)^2 = (y^2)^2 = y^4
+  \]
+  より, $y^3 = 1$. $y$の位数は$3$と$5$の公約数で$1$なので, $y = 1$.
+\end{ans}
+
+\begin{ans}
+  (1) 計算するだけなので略.\\
+  (2) $n$に関する数学的帰納法で証明する.\\
+  (2-i) $n = 3$の場合.
+  関係式より, $H_3$の元は, $x_1$と$x_2$が交互に現れる形をとる.
+  また,
+  \begin{align*}
+    &x_1x_2x_1x_2 = x_1(x_2x_1x_2) = x_1(x_1x_2x_1) = x_2x_1 \\
+    &x_2x_1x_2x_1 = x_2(x_1x_2x_1) = x_2(x_2x_1x_2) = x_1x_2
+  \end{align*}
+  より, 語の長さは$3$以下としてよい.
+  したがって, $H_3$の元は$1$, $x_1$, $x_2$, $x_1x_2$, $x_2x_1$, $x_1x_2x_1 (=x_2x_1x_2)$のいずれかであるので,
+  $\order{H_3} \le 6$.\\
+  (2-ii) $n = k - 1$の場合を仮定して, $n = k$の場合にも成立することを示す.
+  $H_{k}$の中で$x_1,..., x_{k-2}$で生成された部分群を$K$とする.
+  $K$の生成元は$H_{k-1}$の関係式をみたすので,
+  定理4.6.5より, $H_{k-1}$から$K$への全射準同型がある.
+  帰納法の仮定と合わせて$\order{K} \le \order{H_{k-1}} \le (k-1)!$.
+
+  $\tau_i = x_ix_{i+1} \cdots x_{k-1}$ ($i = 1,...,k$, ただし$\tau_k = 1$)
+  とおいて, $H_k/K$の元 (左剰余類) のうち$\tau_i$たちを代表元に取るものの集合
+  \[
+    \{ \tau_iK \mid i = 1,...,k \}
+  \]
+  を考える. これらの剰余類に対して, $H_k$の生成元$x_j\ (j = 1,...k-1)$の左からの積による作用は次のようになる.
+  \begin{align*}
+    x_j\tau_iK = \begin{cases*}
+      \tau_ix_jK = \tau_iK\ &(j \le i - 2) \\
+      \tau_{i-1}K\ &(j = i - 1) \\
+      \tau_{i+1}K\ &(j = i) \\
+      \tau_ix_{j-1}K = \tau_iK\ &(j \ge i + 1)
+    \end{cases*}
+  \end{align*}
+  ただし, $j \ge i + 1$の場合はとくに$x_{i+1}x_ix_{i+1}x_{i+2} = x_ix_{i+1}x_ix_{i+2} = x_ix_{i+1}x_{i+2}x_i$
+  であることを用いている.
+  これにより, $\{ \tau_iK \mid i = 1,...,k \}$は$H_k$の左からの積による作用で閉じていることがわかる.
+  $1$つの剰余類をとるとその軌道は$H_k/K$全体と一致するので,
+  $\{ \tau_iK \mid i = 1,...,k \} = H_k/K$.
+  よって$\order{H_k/K} \le k$.
+  上でみたように$\order{K} \le (k-1)!$であったから, $\order{H_k} \le k!$.
+
+  以上により, $n$についての数学的帰納法で$\order{H_n} \le n!$が示せた.\\
+  (3) (1) と定理4.6.5より, 全射準同型$H_n \rightarrow \mathfrak{S}_n$がある.
+  これと (2) より, この全射準同型は同型である.
+\end{ans}
+
+\begin{ans}
+  (1) $x^{-1} = x^6$, $y^{-1} = y^2$, $yx = x^2y$であることによる.\\
+  (2) $\sigma = (1\ 2\ 3\ 4\ 5\ 6\ 7)$, $\tau = (2\ 3\ 5)(4\ 7\ 6)$とおけばよい.\\
+  (3) (1) より $\order{G} \le 21$. また定理4.6.5より全射準同型$\phi: G \rightarrow \gen{\sigma, \tau}$があるが,
+  $\phi^{-1}(\sigma)$の位数は$7$の倍数, $\phi^{-1}(\tau)$の位数は$3$の倍数なので,$\order{G}$は21の倍数である.
+  よって$\order{G} = 21$.
+\end{ans}
+
+\begin{ans}
+  前問と同様で,
+  \begin{align*}
+    \sigma &= (1\ 2\ 3\ 4\ 5\ 6\ 7\ 8\ 9\ 10\ 11\ 12\ 13) \\
+    \tau &= (2\ 4\ 10)(3\ 7\ 6)(5\ 13\ 11)(8\ 9\ 12)
+  \end{align*}
+  で考える.
+\end{ans}
+
+\begin{ans}
+  与えられた生成元と関係式で定義される群を$G$とする.
+  $x^4 = y^4 = 1$と$yx = x^{-1}y$より,
+  $G$の任意の元は$x^iy^j\ (i = 0, 1, 2, 3,\ j = 0, 1, 2, 3)$の形で書ける.
+  この形で書いた元についてさらに$y^2$を$x^2$で置き換えることにより,
+  任意の元は$x^iy^j\ (i = 0, 1, 2, 3,\ j = 0, 1)$の形で書ける.
+  したがって$\order{G} \le 8$.
+  一方, 四元数群は$G$と同じ生成元と関係式をもつから, $G$から四元数群への全射準同型がある.
+  四元数群の位数は$8$なので, これは同型である.
+\end{ans}
+
+\begin{ans}
+  (1) $\sigma\tau\nu = 1$は計算によって容易に確かめられる.
+  $1$, $\sigma$, $\tau$, $\tau^2$, $\nu$, $\nu^2$, $\nu\tau\nu^{-1} = (1\ 3\ 4)$の$7$つはすべて異なる元であるから,
+  $\order{\gen{\sigma, \tau, \nu}} = 12$. よって, $\gen{\sigma, \tau, \nu} = A_4$.
+  (演習問題4.2.10の解答でも言及したように$\gen{\sigma, \tau} = \gen{\sigma, \nu} = A_4$であり,
+  また明らかに$\gen{\tau, \nu} = A_4$でもある.)\\
+  (2) $Sy = \{ y, y^2, y^3 = 1, y^2zy \}$であるが,
+  $yz = x^{-1} = x =  z^2y^2$より,
+  \begin{align*}
+    y^2zy = y(yz)y = y(z^2y^2)y = yz^2 = (yz)z = z^2y^2z.
+  \end{align*}
+  よって$Sy \subset HS$より$HSy \subset HS$である. $Sz = \{ z, yz, y^2z, y^2z^2 \}$については,
+  上で見たように$yz = z^2y^2$であることと,
+  \begin{align*}
+    y^2z^2 = z^3y^2z^2 = z(z^2y^2)z^2 = z(yz)z^2 = zy
+  \end{align*}
+  による.\\
+  (3) (2) より, $G$の中で$y$と$z$で生成される部分群は$HS$に含まれる.
+  この部分群は$G$と一致するので, $G = HS$である.
+  $\order{H} \le 3$, $\order{S} \le 4$なので, $\order{G} \le 12$.\\
+  (4) $A_4$は$G$と同じ生成元と関係式をもつので, $G$から$A_4$への全射準同型がある.
+  $\order{A_4} = 12$より, これは同型.
+\end{ans}
+
+\begin{ans}
+  (1) $\sigma\tau\nu = 1$は計算により確かめられる.
+  演習問題2.3.9 (2) より, $\mathfrak{S}_4$は$\sigma$と$\nu$で生成される.\\
+  (2) 前問と同様に$HSy, HSz \subset HS$を確かめればよい.
+  とくに$y^2zy$, $y^2z^2y^2$, $yz$, $y^2z^2yz$が$HS$の元であることをみる.
+  $yz = x^{-1} = x = z^3y^2$ (また$zy = y^2z^3$)  に注意すると,
+  $yz$については明らかに$HS$の元であり,\\
+  \begin{align*}
+    &y^2zy = y(z^3y^2)y = yz^3 = z^3y^2z^2 \\
+    &y^2z^2y^2 = y^2z^6y^2 = (y^2z^3)(z^3y^2) = (zy)(yz) = zy^2z \\
+    &y^2z^2yz = y(yz)zyz = y(z^3y^2)zyz = (yz)(z^2y^2zyz) = (z^3y^2)(z^2y^2zyz) \\
+    &= z^3y^2z^2y^2(zy)z = z^3y^2z^2y^2(y^2z^3)z = z^3y^2z^2y
+  \end{align*}
+  これにより, $HSy, HSz \subset HS$であることが確かめられたので,
+  前問と同様に$G = HS$である.\\
+  (4) 前問と同様に$\order{G} \le \order{H} \cdot \order{S} = 24$であり,
+  一方$\mathfrak{S}_4$は$G$と同じ生成元と関係式をもつので, $G$から$\mathfrak{S}_4$への全射準同型がある.
+  $\order{\mathfrak{S}_4} = 24$なので, これは同型.
+\end{ans}
+
+\begin{ans}
+  (1) $\sigma\tau\nu = 1$は計算により確かめられる.
+  $\order{\gen{\sigma, \tau, \nu}}$は$2$, $3$, $5$の公倍数なので, $30$または$60$.
+  さらに, $\mu := \nu\tau\nu^{-1} = (2\ 1\ 4)$とおくと
+  \begin{align*}
+    \mu\sigma\mu^{-1} &= (1\ 4)(2\ 3) \\
+    \mu^2\sigma\mu^{-2} &= (1\ 3)(2\ 4)
+  \end{align*}
+  より, $\gen{\sigma, \tau, \nu}$に位数$4$の部分群$\{1, (1\ 2)(3\ 4), (1\ 3)(2\ 4), (1\ 4)(2\ 3)\}$があることがわかる.
+  したがって$\order{\gen{\sigma, \tau, \nu}}$は$4$の倍数であり, $60$であるから, $\gen{\sigma, \tau, \nu} = A_5$.\\
+  (2) 演習問題4.6.8のヒントの方法で表を書くと次のようになる.\\
+  \begin{tabular}{|c|ccc|ccccc|cccc|}
+    \hline
+    & y & y & y & z & z & z & z & z & y & z & y & z \\
+    \hline
+    1 & 2 & 3 & 1 & 1 & 1 & 1 & 1 & 1 & 2 & 3 & 1 & 1 \\
+    2 & 3 & 1 & 2 & 3 & 4 & 5 & 6 & 2 & 3 & 4 & 6 & 2 \\
+    3 & 1 & 2 & 3 & 4 & 5  & 6 & 2 & 3 & 1 & 1 & 2 & 3 \\
+    4 & 6 & 7 & 4 &  5 & 6 & 2 & 3 & 4 & 6 & 2 & 3 & 4 \\
+    5 & 8 & 9 & 5 & 6 & 2 & 3 & 4 & 5 & 8 & 7 & 4 & 5 \\
+    6 & 7 & 4 & 6 & 2 & 3 & 4 & 5 & 6 & 7 & 9 & 5 & 6 \\
+    7 & 4 & 6 & 7 & 9 & 10 & 11 & 8 & 7 & 4 & 5 & 8 & 7 \\
+    8 & 9 & 5 & 8 & 7 & 9 & 10 & 11 & 8 & 9 & 10 & 11 & 8 \\
+    9 & 5 & 8 & 9 & 10 & 11 & 8 & 7 & 9 & 5 & 6 & 7 & 9 \\
+    10 & 11 & 12 & 10 & 11 & 8 & 7 & 9 & 10 & 11 & 8 & 9 & 10 \\
+    11 & 12 & 10 & 11 & 8 & 7 & 9 & 10 & 11 & 12 & 12 & 10 & 11 \\
+    12 & 10 & 11 & 12 & 12 & 12 & 12 & 12 & 12 & 10 & 11 & 12 & 12 \\
+    \hline
+  \end{tabular}\\
+  したがって, $S = \{
+    1,\ %1
+    y,\ %2 = 1y
+    y^2,\ %3 = 2y
+    y^2z,\ %4 = 3z
+    y^2z^2,\ %5 = 4z
+    y^2z^3,\ %6 = 5z
+    y^2z^3y,\ %7 = 6y
+    y^2z^2y,\ %8 = 5y
+    y^2z^2y^2,\ %9 = 8y
+    y^2z^2y^2z,\\ %10 = 9z
+    y^2z^2y^2z^2,\ %11 = 10z
+    y^2z^2y^2z^2y\ %12 = 11y
+    \}$
+  とおくことにする. $H$を$A_5$のなかで$\nu$で生成された部分群とし, $Sy, Sz \subset HS$を示したい.
+  まず$Sy \subset HS$を示すために問題となるのは, $S$の元のうち
+  $y^2$, $y^2z$, $y^2z^3y$, $y^2z^2y^2$, $y^2z^2y^2z$, $y^2z^2y^2z^2y$ % 3, 4, 7, 9, 10, 12
+  である. それぞれについて, 右から$y$をかけたものを考えると
+  \begin{align*}
+    &(y^2)y = 1 \\ % 3y = 1
+    &(y^2z)y = y(yz)y = y(z^4y^2)y = (yz)z^3 = z^4(y^2z^3) \\ % 4y = 6
+    &(y^2z^3y)y = z(z^4y^2z^3y^2) = z(yzz^3y^2) = z(y(z^4y^2)) = z(y(yz)) = z(y^2z) \\ % 7y = 4
+    &(y^2z^2y^2)y = y^2z^2 \\ % 9y = 5
+    &(y^2z^2y^2z)y = y(yz)zy^2zy = y(z^4y^2)zy^2zy = (yz)z^3y^2zy^2zy = z^4y^2z^3y^2zy^2zy \\
+    &= z^4y^2z^2(zy)yzy^2zy = z^4y^2z^2(y^2z^4)yzy^2zy = z^4y^2z^2y^2z^3(zyzy)yzy \\
+    &= z^4(y^2z^2y^2z^2) \\ % 10y = 11
+    &(y^2z^2y^2z^2y)y = (y^2z^4)z^4(z^4y^2)z^2y^2 = (zy)z^4(yz)z^2y^2  = zy(z^4y^2)(y^2z^4)(z^4y^2)\\
+    &= zy(yz)(zy)(yz) = z(y^2z^2y^2z) % 12y = 10
+  \end{align*}
+  よって$Sy \subset HS$である. $Sz \subset HS$については$S$の元のうち
+  $y$, $y^2z^3$, $y^2z^3y$, $y^2z^2y$, $y^2z^2y^2z^2$, $y^2z^2y^2z^2y$  % 2, 6, 7, 8, 11, 12
+  を調べればよい. 以下のようになる.
+  \begin{align*}
+    &yz = z^4y^2 \\ % 2z = 3
+    &(y^2z^3)z = zy \\ % 6z = 2
+    &(y^2z^3y)z = y^2z^2(zy)z = y^2z^2(y^2z^4)z = y^2z^2y^2 \\ % 7z = 9
+    &(y^2z^2y)z = y^2z^2z^4y^2 = y(yz)y^2 = y(z^4y^2)y^2 = (yz)z^3y = (z^4y^2)z^3y = z^4(y^2z^3y) \\ % 8z = 7
+    &(y^2z^2y^2z^2)z = (y^2z^4)z^3y^2z^3 = zyz^3y^2z^3 = zyz^4(z^4y^2)z^3 = zyz^4(yz)z^3 = zy(z^4y^2)y^2z^4 \\
+    &= zy(yz)y^2z^4 = zy^2z^2(z^4y^2)z^4 = zy^2z^2(yz)z^4 = z(y^2z^2y)\\ % 11z = 8FIXME:
+    &y^2z^2y^2z^2yz = z^4(zy)yz^2y^2z^2yz = z^4(y^2z^4)yz^2y^2z^2yz = z^4y^2z^4yz(y^2z^4)yz^2yz \\
+    &= z^4y^2z^3(zyzy)yz^4yz^2yz = z^4y^2z^3yz^4yz^2yz = z^4y^2z^3yz^4(yz)zyz\\
+    &= z^4y^2z^3yz^4(z^4y^2)zyz = z^4y^2z^3yz^3y = z^4y^2z^2(zy)z^3y = z^4y^2z^2(y^2z^4)z^3y \\
+    &= z^4(y^2z^2y^2z^2y) % 12z = 12
+  \end{align*}
+  よって$Sz \subset HS$. あとは前問と同じ.
+\end{ans}
+
+\begin{ans}
+  (1) $g \in Z(G)$は, $g$が生成元$x$および$y$と可換であることと同値である.
+  $g = y^ix^j$とおくと, まず$g$が$x$と可換であることから,
+  \begin{align*}
+    &(y^ix^j)x = x(y^ix^j) \\
+    &\Rightarrow y^ix = xy^i \\
+    &\Rightarrow y^ix = y^{2i}x \\
+    &\Rightarrow y^i = 1
+  \end{align*}
+  したがって中心の元は$g = x^j$とかける. さらにこれが$y$と可換でなければならないが,
+  \begin{align*}
+    &xy = y^2x \neq yx \\
+    &x^2y = y^4x^2 = yx^2
+  \end{align*}
+  より, $Z(G) = \{1, x^2\}$.\\
+  (2) (1) より$1$つの元からなる共役類は$\{1\}$と$\{x^2\}$のみである.
+  $x(y^ix^j)x^{-1} = (y^{2i}x)x^jx^{-1} = y^{2i}x^j$,
+  $y^{-1}(y^ix^j)y = y^{-1}y^i(y^{2^j}x^j) = y^{2^j+i-1}x^j$
+  より, 共役類のなかで$x$の冪は等しい.
+  このことからまず共役類の元の個数が$3$以下であり, 類等式の可能性としては
+  \begin{align*}
+    &12 = 1 + 1 + 2 + 2 + 2 + 2 + 2 \\
+    &12 = 1 + 1 + 2 + 2 + 3 + 3
+  \end{align*}
+  のみであることがわかる.
+  さらに, $x$の冪が等しい$3$元集合 (中心の元を含まない) がこれ以上分割されることはありえないので,
+  可能な類等式は
+  \[
+    12 = 1 + 1 + 2 + 2 + 3 + 3
+  \]
+  のみであり, 中心以外の元については$x$の冪によって共役類に分かれる.\\
+  (3) $(hgh^{-1})^n = 1 \Leftrightarrow g^n = 1$であるから, 共役類のなかで位数は等しい.
+  よって代表元の位数のみ確認すればよい.
+  代表元のうち, $y$の位数は明らかに$3$であり, $1$, $x$, $x^2$, $x^3$の位数は明らかに$3$ではない.
+  残りの$yx^2$については
+  \begin{align*}
+    &(yx^2)^2 = yx^2yx^2 = y(y^4x^2)x^2 = y^2 \\
+    &(yx^2)^3 = y^2(yx^2) = x^2
+  \end{align*}
+  となるので, これも位数は$3$ではない.
+  したがって位数が$3$となるのは$y$, $y^2$の$2$つである.
+\end{ans}
+
+\begin{ans}
+  (1) 演習問題4.2.6より, $\order{Z(\sigma)} = 2 \cdot (n - 2)!$.
+  また, $\phi(\sigma)$が互換$a$個の積でかけるとすると$\order{Z(\phi(\sigma))} = 2^a \cdot a! \cdot (n - 2a)!$.
+  $\phi$は自己同型なので, これらは等しい:
+  \[
+    2 \cdot (n - 2)! = 2^a \cdot a! \cdot (n - 2a)!
+  \]
+  $a (> 1)$を固定したとき(左辺)/(右辺)が$n$について単調増加であることに注意すると,
+  $a = 2, 3$で等式をみたすのは$(n, a) = (6, 3)$のときのみであることが確かめられる.
+  そこで$a > 3$として, (左辺) > (右辺)となることを示す.
+  単調増加性より, $n = 2a$としてよい. すなわち
+  \[
+    2 \cdot (2a - 2)! > 2^a \cdot a!
+  \]
+  を示せばよいが, これは$a > 3$のとき
+  \begin{align*}
+    2 \cdot (2a - 2)! &= 2 \cdot (2a - 2) \cdots (a + 1) \cdot a! \\
+    &> 2 \cdot 4^{a - 2} \cdot a! \\
+    &= 2^{2a-3} \cdot a! \\
+    &> 2^a \cdot a!
+  \end{align*}
+  であることからわかる.
+
+  (2) (1) と同様に,
+  \[
+    3 \cdot (n - 3)! = 3^a \cdot a! \cdot (n - 3a)!
+  \]
+  を考える.
+  これも$a (> 1)$を固定すると(左辺)/(右辺)が$n$について単調増加であることに注意すると,
+  $a = 2$で等式が成り立つのは$n = 6$のときのみであることが確かめられる.
+  そこで$a > 2$として(左辺) > (右辺)を示す.
+  単調増加性より, $n = 3a$としてよい. すなわち
+  \[
+    3 \cdot (3a - 3)! > 3^a \cdot a!
+  \]
+  を示せばよいが, これは$a > 2$のとき
+  \begin{align*}
+    3 \cdot (3a - 3)! &= 3 \cdot (3a - 3) \cdots (a + 1) \cdot a! \\
+    &> 3 \cdot 3^{2a - 3} \cdot a! \\
+    &= 3^{2a - 2} \cdot a! \\
+    &> 3^a \cdot a!
+  \end{align*}
+  であることからわかる.
+
+  (3) $n = 2$のときは自明.
+  $n = 3$のときは, 互換$\phi((1\ 2))$, $\phi((1\ 3))$の共通する数字を$a_1$とすればよい.
+  $n \ge 4$のとき$1$, $i$, $j$, $k$をすべて異なる数字として,
+  $\phi((1\ i))$と$\phi((1\ j))$と$\phi((1\ k))$の$3$つが共通する数字を持つことを示す.
+  まず, $\phi((1\ i))\phi((1\ j)) = \phi((1\ j\ i))$が長さ$3$の巡回置換であることから,
+  $\phi((1\ i))$と$\phi((1\ j))$は共通する数字を持つ互換である.
+  同じことが任意のペアについて言える.
+  そこで
+  \begin{align*}
+    \phi((1\ i)) &= (a\ b) \\
+    \phi((1\ j)) &= (a\ b^\prime)
+  \end{align*}
+  とおいて, $\phi((1\ k))$が数字$a$を含まないと仮定すると, $\phi((1\ k)) = (b\ b^\prime)$でなければならない.
+  ところが$\{ (1\ i), (1\ j), (1\ k) \}$が$\mathfrak{S}_4$と同型な部分群を生成する一方で,
+  $\{ (a\ b), (a\ b^\prime), (b\ b^\prime) \}$は$\mathfrak{S}_3$と同型な部分群を生成するので,
+  $\phi$が同型であることと矛盾する.
+  したがって, $\phi((1\ i))$と$\phi((1\ j))$と$\phi((1\ k))$は共通する数字$a$を持つ.
+  このことから, $i = 2,\cdots, n$について, $\phi((1\ i))$は共通する数字を持つことがわかる.
+  これを$a_1$とおけばよい.\\
+  (4) (3)より, $\phi$は$(1\ i)$の形の元に対して置換
+  \[
+    \sigma = \begin{pmatrix}
+      1 & 2 & \cdots & n \\
+      a_1 & a_2 & \cdots & a_n
+    \end{pmatrix}
+  \]
+  による共役として作用する. $(1\ i)$の形の元たちは$\mathfrak{S}_n$を生成するから,
+  $\phi$は内部自己同型$g \mapsto \sigma g \sigma^{-1}$である.\\
+  (注意): $(1\ i)$の形の元たちが$\mathfrak{S}_n$を生成することは,
+  $(i\ j) = (1\ i)(1\ j)(1\ i)$と命題2.1.14 (1) からわかる.
+\end{ans}
+
+\begin{ans}
+  与えられた式の右辺を順に$x_1,..., x_5$に割り当てたとき演習問題4.6.4の関係式をみたすことが, 計算によって確かめられる.
+  よって右辺によって生成される部分群$K$について, 定理4.6.5より全射準同型$H_6 \rightarrow K$がある.
+  この全射準同型によって$x_1 \mapsto (1\ 2)(3\ 4)(5\ 6),..., x_5 \mapsto (1\ 4)(2\ 3)(5\ 6)$となっている.
+  また, 演習4.6.4で存在が示された同型$\mathfrak{S}_6 \rightarrow H_6$は
+  $(1\ 2) \mapsto x_1,..., (5\ 6) \mapsto x_5$をみたすものであったから,
+  これらの合成により, 全射準同型$\phi: \mathfrak{S}_6 \rightarrow K$で与えられた式をみたすものが矛盾なく定義できる.
+  あとは$K (= \mathrm{Im}\phi) = \mathfrak{S}_6$であることを示せばよい.
+
+  (アイディア: 有限群の自己同型群は有限群なので, $\phi$が(外部)自己同型ならばある$i$について$\phi^i$が内部自己同型 (恒等写像を含む) になり,
+  $\phi^i((1\ 2)),..., \phi^i((5\ 6))$は$\mathfrak{S}_6$を生成する互換となるはずである.
+  実は$\mathrm{Aut}(\mathfrak{S}_6)/\mathrm{Inn}(\mathfrak{S}_6) \simeq \Z{2}$であることが知られていて,
+  $\phi^2$は内部自己同型である.)
+
+  計算によって
+  \begin{align*}
+    \phi((1\ 2)(3\ 4)(5\ 6)) &= (5\ 6) \\
+    \phi((1\ 4)(2\ 5)(3\ 6)) &= (3\ 5) \\
+    \phi((1\ 3)(2\ 4)(5\ 6)) &= (2\ 3) \\
+    \phi((1\ 2)(3\ 6)(4\ 5)) &= (1\ 2) \\
+    \phi((1\ 4)(2\ 3)(5\ 6)) &= (1\ 4)
+  \end{align*}
+  であることがわかる. これらの互換は
+  \begin{align*}
+    \tau = \begin{pmatrix}
+      6 & 5 & 3 & 2 & 1 & 4 \\
+      1 & 2 & 3 & 4 & 5 & 6
+    \end{pmatrix}
+  \end{align*}
+  による内部自己同型$g \mapsto \tau g \tau^{-1}$によって$\mathfrak{S}_6$の既知の生成元
+  $(1\ 2),..., (5\ 6)$にうつるので, $\mathfrak{S}_6$を生成する.
+  よって$\mathrm{Im}\phi = \mathfrak{S}_6$.
+\end{ans}
+
 \end{document}
