--- a/main.tex
+++ b/main.tex
@@ -698,14 +698,14 @@
   また, $\overline{1} \mapsto \overline{k}$なる自己同型は$x \mapsto \overline{k}x$と書けるので,
   明らかに$\mathrm{Aut}(G)$はアーベル群である.
   有限生成アーベル群の基本定理 (定理4.8.2) より,
-  $\mathrm{Aut}(G) \cong \Z{8}$
+  $\mathrm{Aut}(G) \simeq \Z{8}$
   または
-  $\mathrm{Aut}(G) \cong \Z{2} \times \Z{4}$
+  $\mathrm{Aut}(G) \simeq \Z{2} \times \Z{4}$
   または
-  $\mathrm{Aut}(G) \cong \Z{2} \times \Z{2} \times \Z{2}$
+  $\mathrm{Aut}(G) \simeq \Z{2} \times \Z{2} \times \Z{2}$
   であるが, $\mathrm{Aut}(G)$に単一の生成元がないこと,
   および$\overline{1} \mapsto \overline{2}$なる自己同型の位数が$4$であることが計算により確かめられるので,
-  $\mathrm{Aut}(G) \cong \Z{2} \times \Z{4}$.
+  $\mathrm{Aut}(G) \simeq \Z{2} \times \Z{4}$.
 \end{ans}
 
 \begin{ans}
@@ -1114,17 +1114,17 @@
 \begin{ans}
   $\phi: G \rightarrow H_2$を$\phi(re^{i\theta}) = r$と定義すると
   $\phi$は全射準同型であり, $\Ker{\phi} = H_1$である.
-  したがって準同型定理より$G/H_1 \cong H_2$.
+  したがって準同型定理より$G/H_1 \simeq H_2$.
   また$\psi: G \rightarrow H_1$を$\psi(re^{i\theta}) = e^{i\theta}$と定義すると
   $\psi$は全射準同型であり, $\Ker{\psi} = H_2$である.
-  したがって準同型定理より$G/H_2 \cong H_1$.
+  したがって準同型定理より$G/H_2 \simeq H_1$.
 \end{ans}
 
 \begin{ans}
   $\phi: \mathbb{R} \rightarrow \mathbb{R}/a\mathbb{Z}$を
   $\phi(x) = ax + a\mathbb{Z}$と定めると, $\phi$は全射準同型で
   $\Ker{\phi} = \mathbb{Z}$である. よって準同型定理より
-  $\mathbb{R}/\mathbb{Z} \cong \mathbb{R}/a\mathbb{Z}$.
+  $\mathbb{R}/\mathbb{Z} \simeq \mathbb{R}/a\mathbb{Z}$.
 \end{ans}
 
 \begin{ans}
@@ -1134,7 +1134,7 @@
     a_{21} & a_{22}
   \end{pmatrix} \mapsto \frac{a_{11}}{a_{22}}$
   と定義すると, $\phi$は全射準同型で$\Ker{\phi} = H$であるから,
-  準同型定理より$G/H \cong \mathbb{R}^\times$.
+  準同型定理より$G/H \simeq \mathbb{R}^\times$.
 \end{ans}
 
 \begin{ans}
@@ -1148,7 +1148,7 @@
   一般に, $G$の指数$p$の部分群の数を求める.
   $H$を$G$の指数$p$の部分群とすると, 前問より$H$は$pG$を含む.
   そこで, 例題2.10.12と同様に, $H$は$G/pG$の指数$p$の部分群と1対1に対応する.
-  $G/pG \cong \Z{p} \times \Z{p}$であるから,
+  $G/pG \simeq \Z{p} \times \Z{p}$であるから,
   $\Z{p} \times \Z{p}$の指数$p$の, すなわち位数$p$の部分群の数を求めればよい.
   この部分群は巡回部分群であり, $\langle(x, y)\rangle$ と書ける.
   $x = \overline{0}$であるようなものは, $\langle(\overline{0}, \overline{1})\rangle$のみである.
@@ -1160,9 +1160,9 @@
 
 \begin{ans}
   中国剰余定理より
-  $G \cong \Z{45} \times \Z{3} \times \Z{8} \times \Z{2} \times \Z{7}$
+  $G \simeq \Z{45} \times \Z{3} \times \Z{8} \times \Z{2} \times \Z{7}$
   である. $\Z{45}$, $\Z{3}$, $\Z{7}$において$2$倍写像は全単射なので,
-  $G/2G \cong \Z{2} \times \Z{2}$である.
+  $G/2G \simeq \Z{2} \times \Z{2}$である.
   したがって例題2.10.12と同様にして, $G$の指数$2$の部分群の個数は$3$である.
 \end{ans}
 
@@ -1182,7 +1182,7 @@
 \begin{ans}
   (1) $G = \Z{12}$とおく. $\abs{G} = 12$なので, 部分群の位数の候補は$1, 2, 3, 4, 6, 12$である.
   これらのうち, $1, 12$にはそれぞれ自明な部分群$\{0\}, G$が対応する.
-  また, 中国剰余定理より$G \cong \Z{3} \times \Z{4}$である.
+  また, 中国剰余定理より$G \simeq \Z{3} \times \Z{4}$である.
   以下, $G$の部分群$H$の位数が$2, 3, 4, 6$の場合を考える.\\
   \underline{位数$2$の場合}:
   $H$は巡回群で, ある元$(\overline{a}, \overline{b}) \in \Z{3} \times \Z{4}$で生成される.
@@ -1207,7 +1207,7 @@
   実際, $\langle (\overline{1}, \overline{2}) \rangle$が位数$6$の部分群である.\\
   (2) $G = \Z{18}$とおく. $\abs{G} = 18$なので, 部分群の位数の候補は$1, 2, 3, 6, 9, 18$である.
   これらのうち, $1, 18$にはそれぞれ自明な部分群$\{0\}, G$が対応する.
-  また, 中国剰余定理より$G \cong \Z{2} \times \Z{9}$である.
+  また, 中国剰余定理より$G \simeq \Z{2} \times \Z{9}$である.
   以下, $G$の部分群$H$の位数が$2, 3, 4, 6$の場合を考える.\\
   \underline{位数$2$の場合}:
   (1) の位数$3$の場合と同様で, $\langle (\overline{1}, \overline{0}) \rangle$のみ.\\
@@ -1246,7 +1246,7 @@
   また, 各元の位数を比較することにより$H \cap K = 1_G$である.
   $h_1, h_2 \in H$, $k_1, k_2 \in K$について, もし$h_1k_1 = h_2k_2$ならば$h_2^{-1}h_1 = k_2k_1^{-1} = 1_G$より
   $h_1 = h_2$かつ$k_1 = k_2$である. したがって$\abs{HK} = \abs{H}\abs{K} = 6$なので$HK = G$.
-  命題2.9.2より$G \cong H \times K \cong \Z{3} \times \Z{2} \cong \Z{6}$.\\
+  命題2.9.2より$G \simeq H \times K \simeq \Z{3} \times \Z{2} \simeq \Z{6}$.\\
   (4) $G$が非可換であるとする. $x$を位数$3$の元, $H = \langle x \rangle$として, $y$を$G/H$の生成元の代表元とする.
   (2) でみたように, $y$は位数$2$の元である.
   また$G$の任意の元は, $H$の生成元$x$を用いて$y^kx^l\ (k = 0, 1,\ l = 0, 1, 2)$と書ける.
@@ -2515,5 +2515,209 @@
   $(1\ 2),..., (5\ 6)$にうつるので, $\mathfrak{S}_6$を生成する.
   よって$\mathrm{Im}\phi = \mathfrak{S}_6$.
 \end{ans}
+
+\fakesubsection{4.7 位数12の群の分類}
+
+
+\begin{ans}
+  $H$を$G$のシロー$2$部分群,
+  $K$を$G$のシロー$p$部分群とする.
+  $H \cap K = \{1\}$より,
+  $\order{HK} = 2p$. よって$HK = G$である.
+  もし$H$が$G$の正規部分群であれば,
+  $HK = G$はアーベル群であることになるので, $H$は正規部分群ではない.
+  したがって$H$の共役は$p$個あり, $G$に位数$2$の元は (少なくとも) $p$個ある.
+  一方, $G (= HK)$の任意の元は$H$の生成元$r$と$K$の生成元$t$を用いて$r^it^j$($0 \le i \le 1$, $0 \le j \le p - 1$) と書けるが,
+  これらのうち位数$2$となりうるのは$i = 1$のもののみである.
+  したがって$rt$は位数$2$なので, $rtr = t^{-1}$.
+  また, 明らかに$t^p = r^2 = 1$. したがって全射準同型
+  \[
+    L := \genrel{x, y}{x^p = y^2 = 1, yxy^{-1} = x^{-1}} \rightarrow G
+  \]
+  が存在する. 演習問題4.6.2より$L \simeq D_p$であり,
+  $\order{G} = \order{D_p} = 2p$なので, $G \simeq D_p$.
+\end{ans}
+
+\begin{ans}
+  $H$を$G$のシロー$7$部分群, $K$を$G$のシロー$3$部分群とする.
+  $H \cap K = \{1\}$より$\order{HK} = 21$で, $HK = G$である.
+  $H$の生成元を$a$, $K$の生成元を$b$とすると$G = \gen{a, b}$であり,
+  $a^7 = b^3 = 1$である.
+  また, $H$の共役の数の候補は$1$, $3$であるが, このうち$7$で割ったあまりが$1$であるのは$1$のみである.
+  よって$H$は正規部分群で, $bab^{-1} \in H$.
+  そこで$bab^{-1} = a^i$ ($i = 0, \cdots$ , 6) とおくと, $b^3 = 1$より$a = a^{i^3}$.
+  これが成り立つのは$i = 1, 2, 4$であるが, $G$は非可換なので$i \neq 1$.
+  もし$i = 4$ならば$b^2$を$b$と置きなおすことにすれば,
+  $a^7 = b^3 = 1$と$bab^{-1} = a^2$が成り立つので, 全射準同型
+  \[
+    \genrel{x, y}{x^7 = y^3 = 1, yxy^{-1} = x^2} \rightarrow G
+  \]
+  が存在する. 位数が等しいことから, これは同型である.
+\end{ans}
+
+\begin{ans}
+  前問と同様. $H$をシロー$13$部分群, $K$をシロー$3$部分群とすると, $HK = G$で,
+  $H$の生成元$a$, $K$の生成元$b$により$G = \gen{a, b}$である.
+  また$H$は正規部分群.
+  $bab^{-1} = a^i$をみたすのは$i = 3, 9$だが, $i = 9$のときは$b^2$を$b$と置きなおせばよい.
+\end{ans}
+
+\begin{ans}
+  (1) $G$が非可換であることによる.\\
+  (2) $G$が非可換であることと, 演習問題2.4.8による.\\
+  (3) $\gen{x}$は$G$の正規部分群なので, $yxy^{-1} = x^i$と書ける.
+  また, $G = \gen{x, y}$なので, $G$の非可換性から$yxy^{-1} \neq x$.
+  さらに$yxy^{-1}$と$x$の位数が等しいことから, $yxy^{-1} = x^{-1}$である.
+
+  上の (3) における$y$の位数は$2$または$4$である.
+  $y$の位数が$2$の場合は, $D_4$と同じ関係式が成り立つことと, 位数が等しいことから$G \simeq D_4$.
+  $y$の位数が$4$の場合, 剰余類により$G = \gen{x} \cup y\gen{x}$と分解できることから, $y^2 \in \gen{x}$である.
+  $y^2$の位数はこの場合$2$なので, $x^2 = y^2$である. したがって演習問題4.6.7の関係式が成り立ち, 位数が等しいことから$G$は四元数群と同型.
+\end{ans}
+
+\begin{ans}
+  位数$18$の群$G$は以下のいずれかに同型であることを示す:\\
+  (1) $\Z{18}$ ($\simeq \Z{2} \times \Z{9}$)\\
+  (2) $\Z{2} \times \Z{3} \times \Z{3}$\\
+  (3) $D_9$\\
+  (4) $\mathfrak{S}_3 \times \Z{3}$\\
+  %(4) $\genrel{x, y, z}{x^2 = y^3 = z^3 = 1, xy = y^2x, xz = zx, yz = zy}$ ($\simeq \mathfrak{S}_3 \times \Z{3}$)\\
+  (5) $\genrel{x, y, z}{x^2 = y^3 = z^3 = 1, xy = y^2x, xz = z^2x, yz = zy}$\\
+
+  (1)-(4)が位数18であることは明らか.
+  (5)について, 任意の元が$z^iy^jx^k$と書けることから位数$18$以下である.
+  さらに, $\mathfrak{S}_6$の部分群
+  \[
+    \gen{(1\ 2)(4\ 5), (1\ 2\ 3), (4\ 5\ 6)}
+  \]
+  の生成元が同じ関係式をみたすことから, (5)の群からこの部分群への全射準同型がある.
+  $\order{\gen{(1\ 2)(4\ 5)}} = 2$, $\order{\gen{(1\ 2\ 3), (4\ 5\ 6)}} = 9$
+  より, (5)の群の位数は$18$の倍数である. よって位数は$18$.
+
+  後で用いるので, (4)も(5)のように生成元と関係式であらわしておくことにする.
+  \[
+    \genrel{x, y, z}{x^2 = y^3 = z^3 = 1, xy = y^2x, xz = zx, yz = zy}
+  \]
+  を考えると, (5)と同様にこの群の位数は$18$以下であることがわかる.
+  \[
+    \mathfrak{S}_3 \times \Z{3} = \gen{((1\ 2), \bar{0}), ((1\ 2\ 3), \bar{0}), (1_{\mathfrak{S}_3}, \bar{1})}
+  \]
+  の生成元が同じ関係式をみたすことと, 位数の比較により
+  \[
+    \mathfrak{S}_3 \times \Z{3} \simeq \genrel{x, y, z}{x^2 = y^3 = z^3 = 1, xy = y^2x, xz = zx, yz = zy}
+  \]
+  である.
+
+  (1)-(5)が互いに同型でないことは, 以下で排他的な条件のもとで$G$が(1)-(5)のそれぞれと同型であることによって示される.
+
+  まず, $G$の共通の性質についてみることにする.
+
+  $H$を$G$のシロー$2$部分群, $K$をシロー$3$部分群とする.
+  このとき$K$は指数$2$なので正規部分群であり, したがって$HK$は$G$の部分群である.
+  $\order{HK}$は$\order{H} = 2$と$\order{K} = 9$の公倍数なので, $\order{HK} \ge 18$.
+  よって$HK = G$. さらに$H \cap K = \{1_G\}$である.
+
+  次に$K$の構造について調べる.
+  $K$は位数$9 = 3^2$なので, 命題4.4.4よりアーベル群である.
+  $K$に位数$9$の元があれば, $K \simeq \Z{9}$である.
+  そうでなければ, $K$の単位元以外の元は位数$3$である.
+  そこで位数$3$の元$a$, $b$で$b \notin \gen{a}$となるものをとると,
+  $K$がアーベル群であることから$\gen{a}$, $\gen{b}$はともに正規部分群で,
+  $\gen{a} \cap \gen{b} = \{ 1 \}$,
+  また$\order{\gen{a}\gen{b}} \ge \order{\gen{a} \cup \{b\}} = 4$より
+  $\gen{a}\gen{b} = K$である.
+  よって命題2.9.2より$K \simeq \gen{a} \times \gen{b} \simeq \Z{3} \times \Z{3}$.
+  これで$K \simeq \Z{9}$または$K \simeq \Z{3} \times \Z{3}$であることがわかった.
+
+  以下, 場合分けして$G$が(1)-(5)のいずれかと同型であることを示す.\\
+
+  \underline{場合1: $H$が$G$の正規部分群である場合.}
+  このとき, 命題2.9.2より$G \simeq H \times K$である.したがって,
+  $K$の構造によって
+  \begin{align*}
+    &(1)\ G \simeq \Z{2} \times \Z{9}\\
+    &(2)\ G \simeq \Z{2} \times \Z{3} \times \Z{3}
+  \end{align*}
+  のいずれかである.\\
+
+  \underline{場合2: $H$が$G$の正規部分群でない場合.}
+  このとき, $h \in H$に対して$\phi(h) \in \mathrm{Aut}K$を
+  $\phi(h)(k) = hkh^{-1}$と定める.
+  もし$\phi(H)$が自明であるとすると, $H$が正規部分群であることになり, 矛盾.
+  よって$\phi(H) \simeq \Z{2}$である.\\
+
+  \underline{場合2-1: $K \simeq \Z{9}$の場合.}
+  $H = \gen{a}$, $K = \gen{b}$とする.
+  $\phi(H)$が非自明なので, $aba^{-1} \neq b$.
+  $aba^{-1} = b^i$とおくと,
+  $b = ab^ia^{-1} = (aba^{-1})^i = b^{i^2}$.
+  これがなりたつ$i (\neq 1)$は$i = 8$のみであることが, 計算により確かめられる.
+  $G = HK$は$a$, $b$で生成されて$D_9$と同じ関係式をみたすので,
+  全射準同型$D_9 \rightarrow G$がある. 位数の比較により, $G \simeq D_9$.\\
+
+  \underline{場合2-2: $K \simeq \Z{3} \times \Z{3}$の場合.}
+  $H = \gen{a}$とする.
+  さらにここでは簡単のため, 以下のような表記を用いることにする:
+  \begin{itemize}
+    \item $K$における群演算は和として記号'+'で表記する.
+    \item $\mathrm{Aut}K$の単位元を$I$と書く.
+    \item $\mathrm{Aut}K$の元の和を, 値の和で定義する: $(A + B)(k) := A(k) + B(k)$
+    \item $K$を$\Z{3} \times \Z{3}$とみて両方の成分を$\bar{2}$倍する写像 ($\in \mathrm{Aut}K$) も$\bar{2}$と書く.
+    \item $\phi(H)$の非単位元を$P$と書く. ($P \neq I$, $P^2 = I$.)
+  \end{itemize}
+  $I \pm P$は準同型であるから, $\mathrm{Im}(I \pm P)$は$K$の部分群.
+  さらに
+  \[
+    \bar{2}I = (I + P) + (I - P)
+  \]
+  より, $\mathrm{Im}(I + P) \cup \mathrm{Im}(I - P)$が$K$を生成する.
+  また,
+  \[
+    (I \pm P)(I \mp P) = I - P^2 = 0
+  \]
+  より, $\mathrm{Im}(I \pm P) \subset \Ker{I \mp P}$.
+  このことから, $x \in \mathrm{Im}(I + P) \cap \mathrm{Im}(I - P)$ならば,
+  \[
+    x = (I + P)(x) + (I - P)(x) = 0 + 0 = 0
+  \]
+  すなわち$\mathrm{Im}(I + P) \cap \mathrm{Im}(I - P) = \{ 0 \}$であることもわかる.
+
+  $\mathrm{Im}(I \pm P)$は$\{ 0 \}$, $\Z{3}$, $\Z{3} \times \Z{3}$のいずれかと同型である.
+  以下, $\mathrm{Im}(I + P)$がいずれと同型であるかによって場合分けして考える.\\
+
+  \underline{場合2-2-1: $\mathrm{Im}(I + P) \simeq \{ 0 \}$の場合.}
+  このとき$K = \gen{b, c}$とすると, $(I + P)(b) = 0$より$P(b) = -b$.
+  同様に$P(c) = -c$.
+  $K$の群演算を積の形に戻すと, $aba^{-1} = b^{-1}$かつ$aca^{-1} = c^{-1}$である.
+  $bc = cb$は明らか.
+  したがって$G = HK = \gen{a, b, c}$は(5)の群の関係式をみたすので, 全射準同型
+  \[
+    \genrel{x, y, z}{x^2 = y^3 = z^3 = 1, xy = y^2x, xz = z^2x, yz = zy} \rightarrow G
+  \]
+  がある. 位数の比較により, これは同型である.\\
+
+  \underline{場合2-2-2: $\mathrm{Im}(I + P) \simeq \Z{3}$の場合.}
+  $\mathrm{Im}(I + P) \cap \mathrm{Im}(I - P) = \{ 0 \}$であることと,
+  $\mathrm{Im}(I + P) \cup \mathrm{Im}(I - P)$が$K$を生成することから, $\mathrm{Im}(I - P) \simeq \Z{3}$.
+  そこで, $\mathrm{Im}(I - P)$の生成元$b$, $\mathrm{Im}(I + P)$の生成元$c$とすると, $K = \gen{b, c}$であり,
+  $b \in \Ker{I + P}$より$P(b) = -b$, $c \in \Ker{I - P}$より$P(c) = c$.
+  $K$の群演算を積の形に戻すと, $aba^{-1} = b^{-1}$かつ$aca^{-1} = c$である.
+  $bc = cb$は明らか.
+  したがって$G = HK = \gen{a, b, c}$は(4)の群の関係式をみたすので, 全射準同型
+  \[
+    \genrel{x, y, z}{x^2 = y^3 = z^3 = 1, xy = y^2x, xz = zx, yz = zy} \rightarrow G
+  \]
+  がある. 位数の比較により, これは同型である.\\
+
+  \underline{場合2-2-3: $\mathrm{Im}(I + P) = K$の場合.}
+  このとき$K = \Ker{I - P}$, すなわち$P = I$となり, 矛盾.\\
+
+  以上により, $G$は(1)-(5)のいずれかと同型であることが示された.\\
+
+  (場合2-2に関する注意: 線形代数における一般論として, 標数$\neq 2$の体を係数とする正方行列$P$について,
+  $P^2 = I$であるならば$P$は対角化可能である.
+  ここではその事実の証明を念頭におきつつ, 体$\Z{3}$を係数とする$2$次正方行列の場合の証明を群論的に記述した.)
+\end{ans}
+
 
 \end{document}
