--- a/main.tex
+++ b/main.tex
@@ -2526,7 +2526,7 @@
   $\order{HK} = 2p$. よって$HK = G$である.
   もし$H$が$G$の正規部分群であれば,
   $HK = G$はアーベル群であることになるので, $H$は正規部分群ではない.
-  したがって$H$の共役は$p$個あり, $G$に位数$2$の元は (少なくとも) $p$個ある.
+  したがって$H$の共役は$p$個あり, $G$に位数$2$の元は$p$個ある.
   一方, $G (= HK)$の任意の元は$H$の生成元$r$と$K$の生成元$t$を用いて$r^it^j$($0 \le i \le 1$, $0 \le j \le p - 1$) と書けるが,
   これらのうち位数$2$となりうるのは$i = 1$のもののみである.
   したがって$rt$は位数$2$なので, $rtr = t^{-1}$.
@@ -2699,7 +2699,7 @@
   \underline{場合2-2-2: $\mathrm{Im}(I + P) \simeq \Z{3}$の場合.}
   $\mathrm{Im}(I + P) \cap \mathrm{Im}(I - P) = \{ 0 \}$であることと,
   $\mathrm{Im}(I + P) \cup \mathrm{Im}(I - P)$が$K$を生成することから, $\mathrm{Im}(I - P) \simeq \Z{3}$.
-  そこで, $\mathrm{Im}(I - P)$の生成元$b$, $\mathrm{Im}(I + P)$の生成元$c$とすると, $K = \gen{b, c}$であり,
+  そこで, $\mathrm{Im}(I - P)$の生成元$b$, $\mathrm{Im}(I + P)$の生成元$c$をとると, $K = \gen{b, c}$であり,
   $b \in \Ker{I + P}$より$P(b) = -b$, $c \in \Ker{I - P}$より$P(c) = c$.
   $K$の群演算を積の形に戻すと, $aba^{-1} = b^{-1}$かつ$aca^{-1} = c$である.
   $bc = cb$は明らか.
@@ -2716,8 +2716,65 @@
 
   (場合2-2に関する注意: 線形代数における一般論として, 標数$\neq 2$の体を係数とする正方行列$P$について,
   $P^2 = I$であるならば$P$は対角化可能である.
-  ここではその事実の証明を念頭におきつつ, 体$\Z{3}$を係数とする$2$次正方行列の場合の証明を群論的に記述した.)
-\end{ans}
+  ここではその事実の証明を念頭におきつつ, 体$\Z{3}$を係数とする$2$次正方行列の場合の証明を群論的に記述した.)\\
 
+  (場合2の別解)\\
+
+  \underline{場合2'-1: $H$の共役が$3$つの場合.}
+  $H$の共役を$H_1$, $H_2$, $H_3$とする.
+  このとき, 共役による$\{ H_1, H_2, H_3 \}$への作用により置換表現
+  $\phi: G \rightarrow \mathfrak{S}_3$がある.
+  $H_i = \gen{a_i}\ (i = 1, 2, 3)$, $L = \gen{a_1, a_2, a_3}$とおく.
+  $H_i$は$L$のシロー2部分群である.
+
+  もし$\mathrm{Im}(\phi \vert_{H_i})$が自明であるとすると,
+  $a_i$は$a_1, a_2, a_3$の全てと可換であり, $H_i$は$L$の正規部分群であることになる.
+  これは$L$のシロー2部分群が$3$つあることに矛盾する.
+  したがって$\mathrm{Im}(\phi \vert_{H_i})$は非自明.
+
+  $a_i$による作用は$i$を動かさないので,
+  $a_1$, $a_2$, $a_3$はそれぞれ$(2\ 3)$, $(1\ 3)$, $(1\ 2)$として作用する.
+  このことから, $\phi\vert_L: L \rightarrow \mathfrak{S}_3$が全射であることがわかる.
+  また$L = \gen{a_1, a_2}$であり, $L$の元は$a_1$と$a_2$が交互に現れる語で表せて,
+  \[
+    a_1a_2a_1 = a_2a_1a_2 (= a_3)
+  \]
+  より
+  \begin{align*}
+    a_1a_2a_1a_2 &= a_2a_1\\
+    a_2a_1a_2a_1 &= a_1a_2
+  \end{align*}
+  であるから, $L$の元は長さ$4$未満の語で表せることもわかる.
+  よって$\order{L} \le 7$なので, 全射準同型$\phi\vert_L: L \rightarrow \mathfrak{S}_3$は同型.
+  すなわち$L \simeq \mathfrak{S}_3$.
+  またとくに$\phi$は全射であるから, 準同型定理より$\order{\Ker{\phi}} = 3$なので$\Ker{\phi} \simeq \Z{3}$.
+
+  $L$, $\Ker{\phi}$はともに$G$の正規部分群で, $L \cap \Ker{\phi} = \Ker{\phi\vert_L} = \{ 1 \}$.
+  よって
+  \[
+    L\Ker{\phi} \simeq L \times \Ker{\phi} \simeq \mathfrak{S}_3 \times \Z{3}
+  \]
+  これは$G$の部分群で位数は$18$であるから, $G \simeq \mathfrak{S}_3 \times \Z{3}$.\\
+
+  \underline{場合2'-2: $H$の共役が$9$つの場合.}
+  $H$の生成元を$h$とする.
+  位数$2$の元は$9$個あるが,
+  $G = HK = K \sqcup hK$より, 剰余類$hK$の元はすべて位数$2$である.\\
+
+  \underline{場合2'-2-1: $K \simeq \Z{9}$の場合.}
+  $K$の生成元を$k$とする. このとき$G = \gen{h, k}$であり, $D_9$と同じ関係式
+  \[
+    h^2 = k^9 = 1, hkh = k^{-1}
+  \]
+  がみたされるので, 全射準同型$D_9 \rightarrow G$がある. 位数の比較により, $G \simeq D_9$.\\
+
+  \underline{場合2'-2-2: $K \simeq \Z{3} \times \Z{3}$の場合.}
+  $K = \gen{k_1, k_2}$とする, このとき$G = \gen{h, k_1, k_2}$であり, (5) の群と同じ関係式
+  \[
+    h^2 = k_1^3 = k_2^3 = 1, hk_1 = k_1^2h, hk_2 = k_2^2h, k_1k_2 = k_2k_1
+  \]
+  がみたされるので, (5) の群から$G$への全射準同型がある. 位数の比較により, これは同型.
+
+\end{ans}
 
 \end{document}
